--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
   <title>Kristen Wilde Music</title>
+  <link rel="shortcut icon" href="music_node.ico">
   <meta charset="utf-8">
   <meta name="keywords" content="violin, lessons, piano, keyboard, private, music, Lutz, Wesley Chapel, Land O Lakes, Tampa">
-  <meta name="private violin and piano lessons in Lutz"
+  <meta name="description" content="Private violin, viola, and piano lessons in Lutz, Florida">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
@@ -12,47 +13,37 @@
 </head>
 <body>
 	
-
-<div class="container">
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>                        
-      </button>
-      <a class="navbar-brand" href="index.html">Kristen's Music Studio</a>
-    </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="index.html">Home</a></li>
-        <li><a href="piano.html">Piano</a>
-        <li><a href="violin.html">Violin/Viola</a></li>
-		<li><a href="bio.html">Bio</a></li>
-
-      </ul>
-    </div>
-  </div>
-</nav>
+	<div class="container">
+		<nav class="navbar navbar-inverse">
+		  <div class="container-fluid">
+			<div class="navbar-header">
+			  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>                        
+			  </button>
+			  <a class="navbar-brand" href="index.html">Kristen's Music Studio</a>
+			</div>
+			<div class="collapse navbar-collapse" id="myNavbar">
+			  <ul class="nav navbar-nav">
+				<li class="active"><a href="index.html">Home</a></li>
+				<li><a href="piano.html">Piano </a></li>
+				<li><a href="violin.html">Violin/Viola</a></li>
+				<li><a href="bio.html">Bio</a></li>
+				<li><a href="contact.html">Contact</a></li> 
+			  </ul>
+			</div>
+		  </div>	
+		</nav>
 		
-			<h3>Now enrolling for fall 2015 on piano, violin, or viola!</h3>
-				<h4>Call/text 813-842-5499 or email <a href="mailto:kristen.wilde@gmail.com">kristen.wilde@gmail.com</a>.  </h4>
-			<!--
+			<!-- h3>Now enrolling for fall 2015 on piano, violin, or viola!</h3>
 			&nbsp;
 			<a href="contact.html" class="btn btn-primary" role="button">Reserve Your Spot</a>
 			</h3 -->
 		
 		
-		<div class="row">
-			<div class="col-md-12">
-			<img src="studio.jpg" class="img-responsive" style="padding:10px 0px 20px">
-			
-		</div>
-
-
-		
-		</div>
+	
+			<img src="studio.jpg" class="img-responsive" style="padding:10px 0px 20px" alt="Picture of Kristen's teaching area, with piano, violins, and other instruments on shelves.">
 		<!-- div>
 		<p>My studio walls have listened in on group lessons, jam sessions, and cozy recitals. Classes of young children have sung and danced around this bright room. 
 		After the sun goes down, I relish moments alone polishing my classical favorites. But most often, my studio 
@@ -61,17 +52,16 @@
 		</div -->
 		
 		
-		<div class="container-fluid">
 			<div class="row">
-				<div class="col-md-4 col-sm-6">
+				<div class="col-lg-4 col-md-6 col-sm-12">
 					<div class="well">
-					<p>"Mrs. Kristen is a wonderful music teacher.  She is a very patient and encouraging to her students.  
+					<p>"Mrs. Kristen is a wonderful music teacher.  She is very patient and encouraging to her students.  
 					She allows them to work at their own pace and is able to adapt to their needs.  Mrs. Kristen has a great love of music!  
 					Music education benefits children greatly, and we are glad we have Mrs. Kristen to lead our journey." 
 					<p>-Danielle, mom of student
 					</div>
 				</div>
-				<div class="col-md-4 col-sm-6">
+				<div class="col-lg-4 col-md-6 col-sm-12">
 					<div class="well">
 					<p> "We seriously love having our daughter take lessons from Kristen. Our daughter gets excited about every new song, and is so happy 
 					and proud when she masters a hard one. I love that Kristen is so patient when she has an off-week, or when 
@@ -80,14 +70,14 @@
 					<p>-Deb, mom of student
 					</div>
 				</div>	
-				<div class="col-md-4 col-sm-6">
+				<div class="col-lg-4 col-md-6 col-sm-12">
 					<div class="well">
 					<p>"My 2 daughters (6 and 10) took violin lessons with Kristen for 2 years before we moved away. She was a friendly and attentive teacher, 
 					providing homework and video instruction for the girls to utilize at home. I would absolutely recommend Kristen as a violin teacher."
 					<p>-Nikki, mom of students
 					</div>
 				</div>
-				<div class="col-md-4 col-sm-6">
+				<div class="col-lg-4 col-md-6 col-sm-12">
 					<div class="well">
 					<p>"I love learning the piano because it's really fun, and I get to surprise my dad with the new songs."
 					<p>-piano student, age 7
@@ -96,9 +86,18 @@
 				
 				
 			</div>			
-		</div>
 	</div>
 
+	<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-68166223-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 	</body>
 	
 </html>
